WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.4.0-rc1, 2013-01-01


Version 0.4.0 (under dev!)
--------------------------

* core: fix scroll in buffer after enabling/disabling some filters (if scroll
  is on a hidden line) (bug #37885)
* core: fix memory leak in case of error when building content of bar item for
  display
* core: fix detection of command in input: a single command char is considered
  as a command (API function "string_input_for_bufer")
* core: search for a fallback template when a no template is matching command
  arguments
* core: add option "diff" for command /set (list options with changed value)
* core: fix refresh of windows after split (fix bug with horizontal separator
  between windows) (bug #37874)
* core: fix stuck mouse (bug #36533)
* core: fix default mouse buttons actions for script buffer (focus the window
  before executing action)
* core: add git version in build, display it in "weechat-curses --help" and
  /version
* core: fix scroll of one page down when weechat.look.scroll_page_percent is
  less than 100 (bug #37875)
* core: disable paste detection and confirmation if bar item "input_paste" is
  not used in a visible bar (task #12327)
* core: use high priority (50000) for commands /command and /input so that an
  alias will not take precedence over these commands (bug #36353)
* core: execute command with higher priority when many commands with same name
  are found with different priorities
* core: add color support in options
  weechat.look.prefix_{action|error|join|network|quit} (task #9555)
* core: fix display of combining chars (bug #37775)
* core: display default values for changed config options in output of /set
* core: stop cmake if gcrypt lib is not found (bug #37671)
* core: add incomplete mouse events "event-down" and "event-drag" (task #11840)
* core: add command /eval, use expression in conditions for bars